[gd_scene load_steps=3 format=4 uid="uid://c5h2vw8k1ntx7"]

[ext_resource type="Script" path="res://scenes/components/EquipmentSlot.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.3, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.7, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="EquipmentSlot" type="Panel"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_script")

[node name="ItemIcon" type="Sprite2D" parent="."]
position = Vector2(40, 40)

[node name="SlotLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -15.0
offset_right = 25.0
text = "WEAPON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoverEffect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0.1)
mouse_filter = 2 